--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
           <li><a href="contact.asp">Contact</a></li>
           <li><a href="about.asp">About</a></li>
         </ul>
-
         <main>
           <div class="profilepic">
           <img src="assets/photo.png">
@@ -42,6 +41,7 @@
               I am a multimedia artist specializing in 2D/3D arts and animation. Currently I am in the process of completing my courses for Full Stack Development at the Austin Coding Academy. In 2012 I graduated with a Bachelor's in Multimedia Arts & Animation from The Art Institute of Phoenix.
             </h2>
           </div>         
+          <!-- asdfasdfablahhhhhhhhhhhhhhh -->
            <!-- REPLACE THIS LINE WITH THE PORTFOLIO BUTTON -->
            <button>Portfolio</button>
         </main>
