Changed to myProfilePic.png

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
         <main>
           <div class="profilepic">
-          <img src="assets/photo.png">
+          <img src="assets/myProfilePic.png" alt="Head shot of Me">
           </div>
 
           <div class="intro">
