added grid and info

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -6,17 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;500;700&display=swap" rel="stylesheet">
     
-    <title>Document</title>
+    <title>Naoko Ta</title>
 </head>
 <body>
 
-    <div class="container">
-        <div class="a">a
+    <section class="container">
+        <div class="a"><img id="profile" src="assets/naoko_takeuchi.jpg">
 
            
         </div>
-        <div class="b">b</div>
+
+    <section class="container-2">
+        <article class="article-1"> Naoko Takeuchi
+            <article class="contact">
+                <h2>Contact Details</h2>
+                <h3>(123)123-1234<br>naokotakeuchi@what.com<br>123 NW Tapdf Rd.<br>Sunny Side, CA 92945</h3>
+            </article>
+        </div>
+
+        <div class="b"> Naoko Takeuchi
+            <article class="contact">
+                <h2>Contact Details</h2>
+                <h3>(123)123-1234<br>naokotakeuchi@what.com<br>123 NW Tapdf Rd.<br>Sunny Side, CA 92945</h3>
+            </article>
+        </div>
+    </section> 
+
         <div class="c">c</div>
     </div>
 
