updated name section

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Montserrat:wght@100;200;500;700&display=swap" rel="stylesheet">
     
-    <title>Naoko Ta</title>
+    <title>Naoko Takuechi Resume</title>
 </head>
 <body>
 
@@ -30,10 +30,11 @@
         </div>
 
         <article class="article-1"> 
-            <article class="contact">
+            <article class="work">
                 <h2>Work References</h2>
                 <h3>Chiba Estates<br>1231 W. Dumpling LN<br>Someplace, AK 295931<br>(233)233-2391<br></h3>
-
+          
+                <h3>Usagi Bakery<br>1432 NW Sushi BLVD<br>Wherewhat, AZ 93214</h3>
             </article>
         </div>
     </section> 
