--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a class="has-border" a href="contact.asp">Contact Me</a></li>  
           <li><a class="has-border" a href="https://medium.com/@christinagoo">My Blog</a></li>
           <li><a class="has-border" a href="about.asp">About Me</a></li>
-          <li><a class="has-border" a href="resume.asp">Resume</a></li>
+          <li><a class="has-border" a href="resume/resume.html">Resume</a></li>
         </ul>
 
         <main>
