--- a/aboutPage/aboutPage.html
+++ b/aboutPage/aboutPage.html
@@ -17,9 +17,9 @@
 
             <nav class="top-back">
                 <ul>
-                    <li><a href="../about-assets/index.html">Home</a></li>
-                    <li><a a href="resume/resume.html">Resume</a></li>
-                    <li><a href="contact.asp">Contact Me</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a a href="/resume/resume.html">Resume</a></li>
+                    <li><a href="../contact.asp">Contact Me</a></li>
                 </ul>
             </nav>
       
