finshed. linked about me page on portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
           <li><a class="has-border" a href="contact.asp">Contact Me</a></li>  
           <li><a class="has-border" a href="https://medium.com/@christinagoo">My Blog</a></li>
-          <li><a class="has-border" a href="about.asp">About Me</a></li>
+          <li><a class="has-border" a href="/aboutPage/aboutPage.html">About Me</a></li>
           <li><a class="has-border" a href="resume/resume.html">Resume</a></li>
         </ul>
 
